objects/Book_Meal1__c.object
<CustomObject>
    <label>Book Meal1</label>
    <nameField>
        <displayFormat>BKD-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Meals1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>NewEmail__c</fullName>
        <label>NewEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OldEmail__c</fullName>
        <label>OldEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecipesR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipes</label>
        <referenceTo>recipies__c</referenceTo>
        <relationshipLabel>Book Meals1</relationshipLabel>
        <relationshipName>Book_Meals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Type__c</fullName>
        <label>Food Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Veg</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FligtBooking1__c</fullName>
        <label>FligtBooking1</label>
        <referenceTo>FlightBooking1__c</referenceTo>
        <relationshipLabel>Book Meals1</relationshipLabel>
        <relationshipName>Book_Meals1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
</CustomObject>